Embedded Java 9 warning in comment in code